data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_411.wast
;; 2. **Test Description 2:**    - A loop that includes a `br_if` with a condition that incorrectly references a deeply nested label index, causing the loop to incorrectly evaluate the condition and never exit.    - **Constraint: Label Lookup Constraint**    - **Relation to Infinite Loop:** Incorrect label index results in the condition never being met, causing an infinite loop.

(assert_invalid
  (module (func $incorrect-nested-label (loop (block (br_if 3 (i32.const 1))))))
  "unknown label"
)